--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>ventaFacil App</title>
 </head>
 
-<body style="background-image: url('/montones-de.webp');">
+<body >
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
